build: try with more diskspace
github recently increased builder image size, leaving less diskspace
for us to work with. This commit removes some tooling we do not need.

Signed-off-by: Peter van Dijk <peter.van.dijk@powerdns.com>

--- a/.github/workflows/multi-arch-test-build.yml
+++ b/.github/workflows/multi-arch-test-build.yml
@@ -28,4 +28,4 @@ jobs:
   build:
     name: Feeds Package Test Build
     needs: formalities
-    uses: openwrt/actions-shared-workflows/.github/workflows/multi-arch-test-build.yml@main
+    uses: powerdns/openwrt-actions-shared-workflows/.github/workflows/multi-arch-test-build.yml@diskspace
